Day 01 - Refactor